# openagent-python-sdk

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_CN.md  README_EN.md  mkdocs.yml  pyproject.toml
.agent_memory/: memory_qa-session-001.json  memory_qa-session-72488.json  memory_test.json
.claude/: settings.local.json
docs/: README.md  api-reference.en.md  api-reference.md  builtin-tools.en.md  builtin-tools.md  cli-reference.en.md  cli-reference.md  cli.en.md  cli.md  configuration.en.md  configuration.md  developer-guide.en.md  developer-guide.md  event-taxonomy.en.md  event-taxonomy.md  examples.en.md  examples.md  index.en.md  index.md  migration-0.2-to-0.3.en.md  migration-0.2-to-0.3.md  multi-agent-support-example.en.md  multi-agent-support-example.md  observability.en.md  observability.md  openagent-agent-builder.en.md  openagent-agent-builder.md  plugin-development.en.md  plugin-development.md  pptx-agent-cli.en.md  pptx-agent-cli.md  repository-layout.en.md  repository-layout.md  requirements.txt  seams-and-extension-points.en.md  seams-and-extension-points.md  stream-api.en.md  stream-api.md
docs-v2/: README.md  api-reference.md  configuration.md  developer-guide.md  examples.md  plugin-development.md
docs/architecture/: seams-and-extension-points.en.md  seams-and-extension-points.md
docs/cli/: cli-reference.en.md  cli-reference.md  cli.en.md
docs/configuration/: configuration.en.md  configuration.md
docs/getting-started/: developer-guide.en.md  developer-guide.md  examples.en.md  (+3 more)
examples/: README.md  __init__.py
openagents/: __init__.py  __main__.py  decorators.py
tests/: conftest.py
(+443 files in other folders)
