[project]
name = "openagents-sdk"
version = "0.1.0"
description = "Config-as-code agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mem0ai>=1.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
mcp = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
