[project]
name = "openagents-sdk"
version = "0.0.1"
description = "Config-as-code agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
mcp = [
    "mcp>=1.0.0",
]
mem0 = [
    "mem0ai>=1.0.5",
]
openai = [
    "httpx>=0.27.0",
    "openai>=1.0.0",
]
all = [
    "openagents-sdk[mcp,mem0,openai,dev]",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openagents*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
